--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "name": "zanxbotnew",
   "version": "1.0.0",
   "description": "Discord Bot",
-  "main": "bot.js",
+  "main": "zanpapi.js",
   "scripts": {
     "start": "node bot.js"
   },
